# BizPilotAI

./: .editorconfig  .env.example  .gitattributes  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_auth_schema.py  0002_multitenancy_and_settings.py  0003_inventory_and_sales.py  0004_subscriptions.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  base.py  context.py  gemini.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: api_keys.py  auth.py  billing.py  company.py  copilot.py  customers.py  dashboard.py  health.py  products.py  sales.py  suppliers.py  users.py
backend/app/core/: config.py  exceptions.py  logging.py  middleware.py  security.py  utils.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  api_key.py  company.py  customer.py  mixins.py  product.py  refresh_token.py  sale.py  stock_movement.py  subscription.py  supplier.py  user.py
backend/app/repositories/: api_key.py  base.py  company.py  customer.py  product.py  refresh_token.py  sale.py  subscription.py  supplier.py  user.py
backend/app/schemas/: __init__.py  api_key.py  auth.py  billing.py  company.py  copilot.py  customer.py  dashboard.py  product.py  sale.py  supplier.py  token.py  user.py
backend/app/scripts/: seed.py
backend/app/services/: analytics.py  api_key.py  auth.py  billing.py  company.py  copilot.py  customer.py  product.py  sale.py  supplier.py  user.py
backend/docker/: entrypoint.sh
backend/tests/: conftest.py  test_auth.py  test_billing.py  test_copilot.py  test_dashboard.py  test_health.py  test_inventory_sales.py  test_settings.py
docs/: ARCHITECTURE.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/layout/: AppShell.tsx  PageHeader.tsx
frontend/src/components/ui/: button.tsx  card.tsx  dialog.tsx  tabs.tsx  (+5 more)
frontend/src/context/: AuthProvider.tsx  auth-context.ts
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/lib/: config.ts  money.ts  queryClient.ts  utils.ts
frontend/src/routes/: ProtectedRoute.tsx  PublicOnlyRoute.tsx
frontend/src/types/: auth.ts  dashboard.ts  inventory.ts
(+33 files in other folders)
